GNOME Bugzilla – Bug 743633
gdkscreen-wayland: Don't leak wl_output objects
Last modified: 2015-01-28 16:22:58 UTC
Spotted while debugging something else...
Created attachment 295634 [details] [review] gdkscreen-wayland: Don't leak wl_output objects
Comment on attachment 295634 [details] [review] gdkscreen-wayland: Don't leak wl_output objects Good catch! Looks good to me
Comment on attachment 295634 [details] [review] gdkscreen-wayland: Don't leak wl_output objects f717d98..2dd07f3 master -> master [ git-bz didn't update automatically ]