gdkscreen-wayland: Don't leak wl_output objects

https://bugzilla.gnome.org/show_bug.cgi?id=743633